force-app/main/default/objects/GFB_Test_Drive_Survey__c/GFB_Test_Drive_Survey__c.object-meta.xml
<CustomObject>
    <label>GFB Test Drive Survey</label>
    <nameField>
        <displayFormat>TDS-{00000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GFB Test Drive Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>