force-app/main/default/objects/GFB_Test_Drive_Survey__c/fields/Age_of_record__c.field-meta.xml
<CustomField>
    <fullName>Age_of_record__c</fullName>
    <formula>If(ISBLANK(Action_Taken_Time__c),NOW() - CreatedDate, Action_Taken_Time__c- CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days</inlineHelpText>
    <label>Age of record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>