force-app/main/default/objects/GFB_Test_Drive_Survey__c/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <formula>(VALUE(Overall_Test_Drive_Rating__c) + VALUE(Sales_Consultant_Service_Rating__c))/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>