force-app/main/default/objects/GFB_Test_Drive_Survey__c/fields/CSAT_SC__c.field-meta.xml
<CustomField>
    <fullName>CSAT_SC__c</fullName>
    <formula>Value(Sales_Consultant_Service_Rating__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT SC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>