force-app/main/default/objects/GFB_Test_Drive_Survey__c/fields/CSAT_Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Test_Drive__c</fullName>
    <formula>Value(Overall_Test_Drive_Rating__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT Test Drive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>