force-app/main/default/objects/GFB_Test_Drive_Survey__c/fields/Likeliness_to_Buy_the_Car__c.field-meta.xml
<CustomField>
    <fullName>Likeliness_to_Buy_the_Car__c</fullName>
    <label>Likeliness to Buy the Car</label>
    <length>100</length>
    <type>Text</type>
</CustomField>