force-app/main/default/objects/GFB_Test_Drive_Survey__c/fields/NPS_Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>NPS_Test_Drive__c</fullName>
    <formula>VALUE(SUBSTITUTE(LEFT(Likeliness_to_Recommend_CNC__c , 2), &quot; &quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Test Drive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>