force-app/main/default/objects/GFB_Test_Drive_Survey__c/fields/Other_Feedbacks__c.field-meta.xml
<CustomField>
    <fullName>Other_Feedbacks__c</fullName>
    <label>Other Feedbacks</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>