force-app/main/default/objects/GFB_Test_Drive_Survey__c/fields/Permission_to_Contact_Customer__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_Contact_Customer__c</fullName>
    <label>Permission to Contact Customer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>