force-app/main/default/objects/GFB_Test_Drive_Survey__c/fields/Sales_Consultant_Room_for_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Consultant_Room_for_Improvement__c</fullName>
    <label>Sales Consultant Room for Improvement</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>