force-app/main/default/objects/GFB_Test_Drive_Survey__c/fields/Test_Drive_Room_for_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Room_for_Improvement__c</fullName>
    <label>Test Drive Room for Improvement</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>