force-app/main/default/objects/GFB_Test_Drive_Survey__c/listViews/CIT.listView-meta.xml
<ListView>
    <fullName>CIT</fullName>
    <columns>NAME</columns>
    <columns>Test_Drive__c</columns>
    <columns>Sales_Consultant__c</columns>
    <columns>Action_Taken_Time__c</columns>
    <columns>Negative_Survey__c</columns>
    <columns>Age_of_record__c</columns>
    <columns>Branch_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch_Code__c</field>
        <operation>equals</operation>
        <value>CCF</value>
    </filters>
    <label>CIT</label>
</ListView>